--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.1",
     "@react-three/fiber": "^8.17.12",
-    "@theatre/core": "^0.5.1",
-    "@theatre/r3f": "^0.5.1",
-    "@theatre/studio": "^0.5.1",
+    "@theatre/core": "^0.7.2",
+    "@theatre/r3f": "^0.7.2",
+    "@theatre/studio": "^0.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "0.131.3"
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
